# podcasts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
output/dev_gui.app/Contents/: Info.plist
podcasts/: ctk_doc_gui.py  dev_gui.py  main.py  test_gui.py
podcasts/init/: loging.py
podcasts/utils/: data_preperation.py  data_processing.py  gui.py  sqlite.py  utils.py
