[tool.poetry]
name = "podcasts"
version = "0.1.0"
description = ""
authors = ["Richlogs <richcostello@outlook.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich-logging = "^0.0.1"
pre-commit = "^3.6.0"
pandas = "^2.1.4"
customtkinter = "^5.2.1"
packaging = "^23.2"
ctktable = "^0.9"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
